<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Padel Match</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="title_activity_detail">Detail</string>
    <string name="players_label">PLAYERS</string>
    <string name="action_map">Map Location</string>
    <string name="subscribe_label">Count me in!</string>
    <string name="unsubscribe_label">Count me out!</string>


    <!-- Formats -->
    <string name="date_format">MMMM dd</string>
    <string name="time_format" translatable="false">kk:mm</string>


    <!-- Login SharedPreference Strings -->
    <string name="pref_login_label" translatable="false">Username</string>
    <string name="pref_login_key" translatable="false">login</string>
    <string name="pref_login_default" translatable="false">guest</string>

    <!-- Show only opened SharedPreference Strings -->
    <string name="pref_show_only_opened_key" translatable="false">show_only_opened</string>
    <string name="pref_show_only_opened_label">Show only opened matches</string>
    <string name="pref_show_only_opened_true">Enabled</string>
    <string name="pref_show_only_opened_false">Not Enabled</string>
    <string name="pref_show_only_opened_default" translatable="false">true</string>

    <!-- Enable notifications SharedPreference Strings -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">New matches notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Password SharedPreference Strings -->
    <string name="pref_password_label" translatable="false">Password</string>
    <string name="pref_password_key" translatable="false">password</string>

    <!-- Notification Strings -->
    <string name="notification_label">new matches</string>
    <string name="notification_text">Click here and play padel</string>


    <!-- Number of Days SharedPreference Strings -->
    <string name="pref_nd_label">Number of days to show</string>
    <string name="pref_nd_key" translatable="false">nd</string>
    <string name="pref_nd_5_label">5 days</string>
    <string name="pref_nd_10_label">10 days</string>
    <string name="pref_nd_15_label">15 days</string>
    <string name="pref_nd_20_label">20 days</string>
    <string name="pref_nd_25_label">25 days</string>
    <string name="pref_nd_30_label">30 days</string>
    <string name="pref_nd_5" translatable="false">5</string>
    <string name="pref_nd_10" translatable="false">10</string>
    <string name="pref_nd_15" translatable="false">15</string>
    <string name="pref_nd_20" translatable="false">20</string>
    <string name="pref_nd_25" translatable="false">25</string>
    <string name="pref_nd_30" translatable="false">30</string>

    <!-- ListView Strings-->
    <string name="match_minutes">minutes</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type" translatable="false">com.padelmatch.android</string>
    <string name="content_authority" translatable="false">com.padelmatch.android</string>


</resources>
